robotic-codes/src/test/test_space.txt
test_space.cpp: In function ‘int main()’:
test_space.cpp:12:11: error: expected initializer before ‘l’
   int num l;
           ^
test_space.cpp:16:8: error: ‘space’ was not declared in this scope
   s1 = space(i);
        ^~~~~
test_space.cpp:16:8: note: suggested alternative: ‘isspace’
   s1 = space(i);
        ^~~~~
        isspace
